Lots of changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
   },
   "exclude": [
     "node_modules",
-    "dist",
-    "**/*.tests.*"
+    "dist"
   ],
   "typeAcquisition": {
     "exclude": [
