--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rooster-challenge",
-  "version": "1.0.14",
+  "version": "1.0.0",
   "main": "./dist/index.js",
   "repository": "https://github.com/Anupheaus/rooster-challenge.git",
   "author": "Anupheaus <anupheaus@gmail.com>",
@@ -8,7 +8,9 @@
   "private": false,
   "scripts": {
     "build": "webpack --mode production",
-    "build:dev": "webpack --mode development --watch"
+    "build:dev": "webpack --mode development --watch",
+    "start": "node ./dist/server.js",
+    "heroku-postbuild": "webpack --mode production"
   },
   "files": [
     "dist"
@@ -17,14 +19,15 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "express": "^4.16.4",
-    "anux-exchange": "^1.0.3",
-    "anux-common": "^1.0.17",
+    "anux-exchange": "^1.0.4",
+    "anux-common": "^1.0.19",
     "anux-react-utils": "^1.0.6",
     "cookie-parser": "^1.4.4",
     "axios": "^0.18.0",
     "@mdi/react": "^1.1.0",
     "@mdi/js": "^3.5.95",
-    "@material-ui/core": "^3.9.2"
+    "@material-ui/core": "^3.9.2",
+    "mongodb": "^3.1.13"
   },
   "devDependencies": {
     "@types/react": "^16.8.6",
@@ -36,6 +39,8 @@
     "@types/chai-spies": "^1.0.0",
     "@types/enzyme": "^3.9.0",
     "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.20",
+    "@types/proxyquire": "^1.3.28",
     "stylelint": "^9.10.1",
     "tslint": "^5.13.1",
     "tslint-no-unused-expression-chai": "^0.1.4",
@@ -68,6 +73,7 @@
     "chai-fuzzy": "^1.6.1",
     "mocha": "^6.0.2",
     "jsdom": "^13.2.0",
-    "nodemon-webpack-plugin": "^4.0.7"
+    "nodemon-webpack-plugin": "^4.0.7",
+    "proxyquire": "^2.1.0"
   }
 }
