--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@mdi/react": "^1.1.0",
     "@mdi/js": "^3.5.95",
     "@material-ui/core": "^3.9.2",
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/react": "^16.8.6",
